# help-cli

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  config.py  h.sh  main.py  pyproject.toml  tox.ini
help_cli/: __main__.py  exceptions.py  network.py  openshift.py  ssh.py  sync.py  utils.py
hey_clipy/: .sarahbx_cli_bash_profile  __main__.py  logger.py  network.py  ssh.py  sync.py
